--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Dustin Kocher
+email: dtkocher@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Dustin Kocher is a Father, Husband, Friend, and last but not least a
+  Solutions Engineer. Enjoys creating great software and user experiences
+  using several different technologies. Specializes in Ruby on Rails, J2EE,
+  AngularJS, and Bootstrap for web applications and RubyMotion for both Iphone
+  and Android applications.
 baseurl: "/personalwebsite" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://dustinkocher.com" # the base hostname & protocol for your site
+twitter_username: DustinKocher
+github_username:  dtkocher
 
 # Build settings
 markdown: kramdown
