Do some more blog setup

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
 title: Dustin Kocher
+paginate: 5
 email: dtkocher@hotmail.com
 description: >
   Dustin Kocher is a Father, Husband, Friend, and last but not least a
