--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Site settings
+# Descriptions
 title: Dustin Kocher
 email: dtkocher@hotmail.com
 description: >
@@ -9,15 +9,24 @@ description: >
   and Android applications.
 keywords: >
   Freelancer, Ruby on Rails, Software Engineer
-baseurl: "" # the subpath of your site, e.g. /blog/
+
+# urls
 url: "http://dustinkocher.com" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+
+# Social names
 twitter_username: DustinKocher
 github_username:  dtkocher
 linkedin_username:  dtkocher
 
 # Build settings
+paginate: 5
+paginate_path: "blog/page:num"
+
+# Styling
 markdown: kramdown
 sass:
+  syntax: scss
   style: compressed
-paginate: 5
-paginate_path: "blog/page:num/"
+
+exclude: ['README.markdown', 'Gemfile.lock', 'Gemfile']
