--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,9 @@ linkedin_username:  dtkocher
 paginate: 5
 paginate_path: "blog/page:num"
 
-# Styling
-markdown: kramdown
+highlighter: pygments
+markdown: redcarpet
+
 sass:
   syntax: scss
   style: compressed
