--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ github_username:  dtkocher
 linkedin_username:  dtkocher
 
 # Build settings
+gems: [jekyll-paginate]
 paginate: 5
 paginate_path: "blog/page:num"
 
