--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,7 @@ gems: [jekyll-paginate]
 paginate: 5
 paginate_path: "blog/page:num"
 
-highlighter: pygments
-markdown: redcarpet
+markdown: kramdown
 
 sass:
   syntax: scss
