--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ gems: [jekyll-paginate]
 paginate: 5
 paginate_path: "blog/page:num"
 
-markdown: kramdown
+kramdown:
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
 
 sass:
   syntax: scss
