--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ paginate: 5
 paginate_path: "blog/page:num"
 
 kramdown:
+  auto_ids:       true
+  entity_output:  as_char
+  toc_levels:     1..6
   smart_quotes:   lsquo,rsquo,ldquo,rdquo
 
 sass:
